--- a/betta-0.0.4.scss
+++ b/betta-0.0.4.scss
@@ -1386,10 +1386,10 @@ a.card .betta_image {
     height: 17rem;
     width: 25.5rem;
     background: $color-accent;
+    overflow: hidden;
 }
 
 a.card .betta_image img {
-    height: 100%;
     width: 100%;
     border-top-left-radius: 0.25rem;
     border-top-right-radius: 0.25rem;
