--- a/betta-0.0.4.scss
+++ b/betta-0.0.4.scss
@@ -1396,6 +1396,7 @@ a.card .betta_image img {
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
 	transition: $transition-default;
+    image-orientation: none;
 }
 
 /* Cover card */
