--- a/betta-0.0.4.scss
+++ b/betta-0.0.4.scss
@@ -650,14 +650,24 @@ img.round {
     scrollbar-width: 0;
 }
 
-.betta_image-strip #back {
-    left: calc(50vw - (55rem / 2) - 4rem);
+.betta_image-strip .back, .betta_image-strip .forward {
+	z-index: 99;
+	position: absolute;
+	margin-top: 45vh;
+}
+
+.betta_image-strip .back:disabled, .betta_image-strip .forward:disabled {
+	display: none;
+}
+
+.betta_image-strip .back {
+    left: calc(50vw - (55rem / 2) - 1rem);
     margin-top: 8rem;
     z-index: 5;
 }
 
-.betta_image-strip #forward {
-    right: calc(50vw - (55rem / 2) - 4rem);
+.betta_image-strip .forward {
+    right: calc(50vw - (55rem / 2) - 1rem);
     margin-top: 8rem;
     z-index: 5;
 }
