--- a/betta-0.0.4.css
+++ b/betta-0.0.4.css
@@ -400,7 +400,7 @@ main {
 @media (max-width: 600px) {
   #page,
 main {
-    padding: 0 1rem 1rem 1rem;
+    padding: 0 1rem 4rem 1rem;
   }
 }
 body, nav, main, div, article, section,
@@ -1283,7 +1283,8 @@ form input[type=file] {
 
   #betta_home-button {
     top: auto;
-    bottom: 1.5rem;
+    bottom: 0.75rem;
+    left: calc(50vw - 6rem) !important;
   }
 }
 /*-------------------------------------*/
