--- a/betta-0.0.4.scss
+++ b/betta-0.0.4.scss
@@ -14,6 +14,7 @@ E.g. sass --watch betta-0.0.4.scss betta-0.0.4.css
 - #page, use main instead
 - .material-icons-round, use .icon instead
 - .custom-icon, use .icon instead
+- betta_action-menu
 
 TEMP is used to denote properties that need to be changed
 ---------------------------------------*/
@@ -523,6 +524,7 @@ header.hero>h1 {
 
 /*---------------------------------------
 	Action Menu
+    DEPRECATED
 ---------------------------------------*/
 .betta_action-menu {
 	position: fixed;
@@ -1277,6 +1279,29 @@ between lines
 		width: 100%;
 	}
 }
+
+/*---------------------------------------
+	Overlapping Text Box
+---------------------------------------*/
+.betta_overlap-top {
+    position: relative;
+    margin-top: -5rem;
+    z-index: 2;
+    padding: 1rem 2rem;
+    background: #f5f5f5;
+    max-width: 34rem;
+}
+
+@media(max-width: 800px) {
+    .betta_overlap-top {
+        position: relative;
+        margin-top: 0;
+        z-index: 0;
+        padding: 1rem;
+        background: none !important;
+    }
+}
+/*-------------------------------------*/
 
 /*---------------------------------------
 	Gallery
