--- a/betta-0.0.4.css
+++ b/betta-0.0.4.css
@@ -956,7 +956,6 @@ img.round {
 	Image Strip
 ---------------------------------------*/
 .betta_image-strip {
-  height: 20rem;
   overflow-x: hidden;
   overflow-y: hidden;
   white-space: nowrap;
@@ -991,6 +990,26 @@ img.round {
   margin: 1rem;
 }
 
+@media (max-width: 1000px) {
+  .betta_image-strip .back {
+    left: 1rem;
+  }
+
+  .betta_image-strip .forward {
+    right: 1rem;
+  }
+}
+@media (max-width: 800px) {
+  .betta_image-strip .back,
+.betta_image-strip .forward {
+    margin-top: -1rem;
+  }
+
+  .betta_image-strip .betta_image {
+    width: calc(100% - 2rem);
+    margin: 0 1rem;
+  }
+}
 /*-------------------------------------*/
 /*---------------------------------------
 	Slideshow
