--- a/betta-0.0.4.scss
+++ b/betta-0.0.4.scss
@@ -655,7 +655,6 @@ img.round {
 	Image Strip
 ---------------------------------------*/
 .betta_image-strip {
-    height: 20rem;
     overflow-x: hidden;
     overflow-y: hidden;
     white-space: nowrap;
@@ -688,6 +687,28 @@ img.round {
     display: inline-block;
     width: calc(50% - 2rem);
     margin: 1rem;
+}
+
+@media(max-width: 1000px) {
+    .betta_image-strip .back {
+        left: 1rem;
+    }
+    
+    .betta_image-strip .forward {
+        right: 1rem;
+    }
+}
+
+@media(max-width: 800px) {
+    .betta_image-strip .back ,
+    .betta_image-strip .forward {
+        margin-top: -1rem;
+    }
+
+    .betta_image-strip .betta_image {
+        width: calc(100% - 2rem);
+        margin: 0 1rem;
+    }
 }
 /*-------------------------------------*/
 
