--- a/betta-0.0.4.css
+++ b/betta-0.0.4.css
@@ -1986,7 +1986,6 @@ a.card-double .content {
 .card.contact {
   display: inline-block;
   vertical-align: top;
-  height: 30rem;
   width: 25rem;
   margin: 1.25rem 0.75rem 0 0.75rem;
 }
@@ -2001,9 +2000,8 @@ a.card-double .content {
 .card.contact .content {
   position: relative;
   width: 16rem;
-  padding: 0.5rem;
-  margin: -2rem auto 0 auto;
-  background: #f5f5f5;
+  padding: 1rem 0.5rem;
+  margin: 0 auto;
   z-index: 2;
 }
 
@@ -2013,7 +2011,7 @@ a.card-double .content {
 
 .card.contact .phone {
   position: absolute;
-  top: 0.75rem;
+  top: -1.25rem;
   left: -1.25rem;
   border-bottom: none;
   z-index: 1;
@@ -2021,7 +2019,7 @@ a.card-double .content {
 
 .card.contact .email {
   position: absolute;
-  top: 0.75rem;
+  top: -1.25rem;
   right: -1.25rem;
   border-bottom: none;
   z-index: 1;
@@ -2041,7 +2039,7 @@ a.card-double .content {
   bottom: 0;
   right: 0;
   padding-top: 1.3rem;
-  background-color: #f5f5f5;
+  background-color: #ffffff;
 }
 
 .card.contact .phone-number:hover,
@@ -2051,7 +2049,7 @@ a.card-double .content {
 
 .card.contact .phone-number:hover + .phone,
 .card.contact .email-address:hover + .email {
-  background-color: #f5f5f5;
+  background-color: #ffffff;
 }
 
 /*-------------------------------------*/
