--- a/betta-0.0.4.scss
+++ b/betta-0.0.4.scss
@@ -1716,7 +1716,6 @@ a.card-double:active
 .card.contact {
 	display: inline-block;
 	vertical-align: top;
-	height: 30rem;
 	width: 25rem;
     margin: 1.25rem 0.75rem 0 0.75rem;
 }
@@ -1726,15 +1725,13 @@ a.card-double:active
 	height: 25rem;
     background: $color-accent;
     overflow: hidden;
-
 }
 
 .card.contact .content {
     position: relative;
     width: 16rem;
-    padding: 0.5rem;
-    margin: -2rem auto 0 auto;
-    background: $color-accent;
+    padding: 1rem 0.5rem;
+    margin: 0 auto;
     z-index: 2;
 }
 
@@ -1744,7 +1741,7 @@ a.card-double:active
 
 .card.contact .phone {
     position: absolute;
-    top: 0.75rem;
+    top: -1.25rem;
     left: -1.25rem;
     border-bottom: none;
     z-index: 1;
@@ -1752,7 +1749,7 @@ a.card-double:active
 
 .card.contact .email {
     position: absolute;
-    top: 0.75rem;
+    top: -1.25rem;
     right: -1.25rem;
     border-bottom: none;
     z-index: 1;
@@ -1772,7 +1769,7 @@ a.card-double:active
     bottom: 0;
     right: 0;
     padding-top: 1.3rem;
-    background-color: $color-accent;
+    background-color: $color-background;
 }
 
 .card.contact .phone-number:hover,
@@ -1782,9 +1779,8 @@ a.card-double:active
 
 .card.contact .phone-number:hover + .phone,
 .card.contact .email-address:hover + .email {
-    background-color: $color-accent;
+    background-color: $color-background;
 }
-
 /*-------------------------------------*/
 
 /*---------------------------------------
