--- a/betta-0.0.4.scss
+++ b/betta-0.0.4.scss
@@ -1717,13 +1717,13 @@ a.card-double:active
 	display: inline-block;
 	vertical-align: top;
 	width: 25rem;
+    max-width: calc(100% - 1.5rem);
     margin: 1.25rem 0.75rem 0 0.75rem;
 }
 
 .card.contact .picture {
 	width: 25rem;
-	height: 25rem;
-    background: $color-accent;
+    max-width: 100%;
     overflow: hidden;
 }
 
@@ -1741,7 +1741,7 @@ a.card-double:active
 
 .card.contact .phone {
     position: absolute;
-    top: -1.25rem;
+    top: -1.5rem;
     left: -1.25rem;
     border-bottom: none;
     z-index: 1;
@@ -1749,7 +1749,7 @@ a.card-double:active
 
 .card.contact .email {
     position: absolute;
-    top: -1.25rem;
+    top: -1.5rem;
     right: -1.25rem;
     border-bottom: none;
     z-index: 1;
@@ -1780,6 +1780,18 @@ a.card-double:active
 .card.contact .phone-number:hover + .phone,
 .card.contact .email-address:hover + .email {
     background-color: $color-background;
+}
+
+@media(max-width: 800px) {
+    .card.contact .phone {
+        top: -2rem;
+        left: -2.25rem;
+    }
+    
+    .card.contact .email {
+        top: -2rem;
+        right: -2.25rem;
+    }
 }
 /*-------------------------------------*/
 
