--- a/betta-0.0.4.css
+++ b/betta-0.0.4.css
@@ -1536,6 +1536,11 @@ between lines
   display: none;
 }
 
+.betta_spacer-half {
+  display: block;
+  height: 0.8rem;
+}
+
 .click-plane {
   position: absolute;
   top: 0;
@@ -1721,6 +1726,7 @@ a.card {
   position: relative;
   display: inline-block;
   width: 25.5rem;
+  max-width: 100%;
   padding: 0;
   margin-top: 1rem;
   margin: 1rem;
@@ -1731,8 +1737,8 @@ a.card {
 }
 
 a.card .betta_image {
-  height: 17rem;
   width: 25.5rem;
+  max-width: 100%;
   background: #f5f5f5;
   overflow: hidden;
 }
@@ -1860,14 +1866,8 @@ a.card.cover:hover h4 {
 }
 @media (max-width: 800px) {
   a.card {
-    width: 100%;
     padding: 0;
     margin: 1rem 0 0 0;
-  }
-
-  a.card .betta_image {
-    height: auto;
-    width: 100%;
   }
 
   a.card p {
@@ -1906,6 +1906,7 @@ a.card.cover h4 {
 a.card-double {
   display: block;
   width: 55rem;
+  max-width: 100%;
   height: 27.5rem;
   padding: 0;
   margin-top: 3rem;
