--- a/betta-0.0.4.scss
+++ b/betta-0.0.4.scss
@@ -51,6 +51,7 @@ $shadow-level-2-i: 0 -2px 6px 1px rgba(0,0,0,0.2);
 ---------------------------------------*/
 $font-small: 0.8rem;
 $line-height: 1.6rem;
+$half-line-height: 0.8rem;
 
 /*---------------------------------------
   Transitions
@@ -1245,6 +1246,11 @@ between lines
     display: none;
 }
 
+.betta_spacer-half {
+    display: block;
+    height: $half-line-height;
+}
+
 .click-plane {
     position: absolute;
     top: 0;
@@ -1440,6 +1446,7 @@ a.card {
     position: relative;
 	display: inline-block;
     width: 25.5rem;
+    max-width: 100%;
 	padding: 0;
 	margin-top: 1rem;
 	margin: 1rem;
@@ -1450,8 +1457,8 @@ a.card {
 }
 
 a.card .betta_image {
-    height: 17rem;
     width: 25.5rem;
+    max-width: 100%;
     background: $color-accent;
     overflow: hidden;
 }
@@ -1583,14 +1590,8 @@ a.card-double h4 {
 
 @media(max-width: 800px) {
     a.card {
-        width: 100%;
         padding: 0;
         margin: 1rem 0 0 0;
-    }
-    
-    a.card .betta_image {
-        height: auto;
-        width: 100%;
     }
 
     a.card p {
@@ -1620,7 +1621,6 @@ a.card-double h4 {
     a.card.cover h4 {
         font-size: 1rem;
         line-height: $line-height;
-        //margin-top: 1.75rem;
     }
 }
 /*-------------------------------------*/
@@ -1632,6 +1632,7 @@ a.card-double h4 {
 a.card-double {
 	display: block;
     width: 55rem;
+    max-width: 100%;
     height: 27.5rem;
 	padding: 0;
 	margin-top: 3rem;
