--- a/betta-0.0.4.css
+++ b/betta-0.0.4.css
@@ -1959,6 +1959,8 @@ a.card-double:active {
 
 @media (max-width: 800px) {
   a.card-double {
+    display: flex;
+    flex-direction: column;
     height: auto;
     width: 100%;
     margin-top: 2rem;
@@ -1976,7 +1978,12 @@ a.card-double .content {
     display: block;
   }
 
+  .card-double .betta_image {
+    order: 1;
+  }
+
   a.card-double .content {
+    order: 2;
     padding: 0 1rem;
   }
 }
