Fix border radius

--- a/betta-0.0.4.css
+++ b/betta-0.0.4.css
@@ -1788,6 +1788,8 @@ a.card {
 a.card .betta_image {
   width: 25.5rem;
   max-width: 100%;
+  border-top-left-radius: 0.25rem;
+  border-top-right-radius: 0.25rem;
   background: #f5f5f5;
   overflow: hidden;
 }
