--- a/betta-0.0.4.css
+++ b/betta-0.0.4.css
@@ -2058,8 +2058,9 @@ a.card-double .content {
   position: relative;
   width: 16rem;
   padding: 1rem 0.5rem;
-  margin: 0 auto;
+  margin: -2.75rem auto 1rem auto;
   z-index: 2;
+  background: #f5f5f5;
 }
 
 .card.contact .content p {
@@ -2068,7 +2069,7 @@ a.card-double .content {
 
 .card.contact .phone {
   position: absolute;
-  top: -1.5rem;
+  top: 1.25rem;
   left: -1.25rem;
   border-bottom: none;
   z-index: 1;
@@ -2076,7 +2077,7 @@ a.card-double .content {
 
 .card.contact .email {
   position: absolute;
-  top: -1.5rem;
+  top: 1.25rem;
   right: -1.25rem;
   border-bottom: none;
   z-index: 1;
@@ -2096,7 +2097,7 @@ a.card-double .content {
   bottom: 0;
   right: 0;
   padding-top: 1.3rem;
-  background-color: #ffffff;
+  background: #f5f5f5;
 }
 
 .card.contact .phone-number:hover,
