--- a/betta-0.0.4.scss
+++ b/betta-0.0.4.scss
@@ -1784,8 +1784,9 @@ a.card-double:active {
   position: relative;
   width: 16rem;
   padding: 1rem 0.5rem;
-  margin: 0 auto;
+  margin: -2.75rem auto 1rem auto;
   z-index: 2;
+  background: $color-accent;
 }
 
 .card.contact .content p {
@@ -1794,7 +1795,7 @@ a.card-double:active {
 
 .card.contact .phone {
   position: absolute;
-  top: -1.5rem;
+  top: 1.25rem;
   left: -1.25rem;
   border-bottom: none;
   z-index: 1;
@@ -1802,7 +1803,7 @@ a.card-double:active {
 
 .card.contact .email {
   position: absolute;
-  top: -1.5rem;
+  top: 1.25rem;
   right: -1.25rem;
   border-bottom: none;
   z-index: 1;
@@ -1822,7 +1823,7 @@ a.card-double:active {
   bottom: 0;
   right: 0;
   padding-top: 1.3rem;
-  background-color: $color-background;
+  background: $color-accent;
 }
 
 .card.contact .phone-number:hover,
