Add basic sizing for textareas

--- a/betta-0.0.4.css
+++ b/betta-0.0.4.css
@@ -1132,6 +1132,12 @@ form input[type=file] {
   display: none;
 }
 
+form textarea {
+  width: 100%;
+  max-width: 100%;
+  height: 5rem;
+}
+
 /*-------------------------------------*/
 /*---------------------------------------
 	Main Navigation Menu
