--- a/betta-0.0.4.scss
+++ b/betta-0.0.4.scss
@@ -840,6 +840,12 @@ form button[type="button"] .material-icons-round {
 form input[type="file"] {
   display: none;
 }
+
+form textarea {
+  width: 100%;
+  max-width: 100%;
+  height: 5rem;
+}
 /*-------------------------------------*/
 
 /*---------------------------------------
