Add spacing to h3 headers in forms

--- a/betta-0.0.4.scss
+++ b/betta-0.0.4.scss
@@ -813,6 +813,10 @@ form {
   padding-bottom: $line-height;
 }
 
+form h3 {
+  margin-bottom: $line-height;
+}
+
 form label,
 form button {
   vertical-align: middle;
