--- a/betta-0.0.4.css
+++ b/betta-0.0.4.css
@@ -1106,6 +1106,10 @@ form {
   padding-bottom: 1.6rem;
 }
 
+form h3 {
+  margin-bottom: 1.6rem;
+}
+
 form label,
 form button {
   vertical-align: middle;
