Fix image orientation

--- a/betta-0.0.4.css
+++ b/betta-0.0.4.css
@@ -976,6 +976,7 @@ img.round {
 .betta_image > div img {
   margin-bottom: -3px;
   border-radius: 0;
+  image-orientation: none;
 }
 
 .betta_image > div img.round {
