Fix double card content not displaying inline

--- a/betta-0.0.4.css
+++ b/betta-0.0.4.css
@@ -1989,6 +1989,14 @@ a.card-double .content {
 }
 
 a.card-double .betta_image {
+  width: 50%;
+}
+
+a.card-double .content {
+  width: 49.5%;
+}
+
+a.card-double .betta_image {
   background: #f5f5f5;
 }
 
