--- a/betta-0.0.4.scss
+++ b/betta-0.0.4.scss
@@ -1713,6 +1713,14 @@ a.card-double .content {
 }
 
 a.card-double .betta_image {
+  width: 50%;
+}
+
+a.card-double .content {
+  width: 49.5%;
+}
+
+a.card-double .betta_image {
   background: $color-accent;
 }
 
