--- a/betta-0.0.4.scss
+++ b/betta-0.0.4.scss
@@ -31,6 +31,12 @@ $color-accent: #f5f5f5 !default;
 $color-background: #ffffff !default;
 $color-active: #eeeeee !default;
 
+$color-main-dark: #ffffff !default;
+$color-secondary-dark: #e0e0e0 !default;
+$color-accent-dark: #f5f5f5 !default;
+$color-background-dark: #212121 !default;
+$color-active-dark: #eeeeee !default;
+
 /*---------------------------------------
   Shady stuff
 ---------------------------------------*/
@@ -67,6 +73,10 @@ $transition-slow: 0.3s;
 body {
   margin: 0;
   font-size: 16px;
+}
+
+body.dark {
+  background: $color-background-dark;
 }
 
 #page,
@@ -181,6 +191,23 @@ button {
   color: $color-main;
 }
 
+.dark h1,
+.dark h2,
+.dark h3,
+.dark h4,
+.dark h5,
+.dark h6,
+.dark p,
+.dark a,
+.dark li,
+.dark textarea,
+.dark option,
+.dark input,
+.dark select,
+.dark button {
+  color: $color-main-dark;
+}
+
 a {
   text-decoration: none;
   transition: $transition-default;
@@ -259,6 +286,17 @@ h5 > a:hover,
 h6 > a:hover,
 li.link:hover > a {
   border-color: $color-main;
+}
+
+.dark p > a:hover,
+.dark h1 > a:hover,
+.dark h2 > a:hover,
+.dark h3 > a:hover,
+.dark h4 > a:hover,
+.dark h5 > a:hover,
+.dark h6 > a:hover,
+.dark li.link:hover > a {
+  border-color: $color-main-dark;
 }
 
 p > a.icon {
@@ -2133,4 +2171,3 @@ p.version {
   box-shadow: $shadow-level-2;
 }
 /*-------------------------------------*/
-
